fix : 공지사항 서비스 수정, 에러페이지 레이어 제거